--- a/doku/header.tex
+++ b/doku/header.tex
@@ -2,9 +2,9 @@
 % This tex document was created by Björn Peemöller and Stefan Roggensack
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \documentclass
-  [ twoside            % beidseitiger Druck
+  [ oneside            % beidseitiger Druck
   , BCOR=10mm          % Bindekorrektur
-  , openright          % Kapitel beginnen auf einer rechten Seite
+%  , openright          % Kapitel beginnen auf einer rechten Seite
   , listof=totoc       % Verzeichnisse im Inhaltsverzeichnis
   , bibliography=totoc % Literaturverzeichnis im Inhaltsverzeichnis
   , parskip=half       % AbsÃ¤tze durch einen vergrÃ¶ÃŸerten Zeilenabstand getrennt
@@ -50,8 +50,8 @@
 
 %% Document properties %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\projname}{Edgeblend}
-\newcommand{\titel}{Edgeblend}
-\newcommand{\subtitel}{Horizontales und vertikales edgeblending für Multi-Beamer Systeme}
+\newcommand{\titel}{Plug-In für Edge-Blending}
+\newcommand{\subtitel}{Horizontales und vertikales edgeblending für Multi-Beamer Systeme als Plug-In}
 \newcommand{\Datum}{10. Mai 2010}
 \newcommand{\Author}{Markus Knofe and Alexander Treptow}
 
