--- a/doku/thesis_framing/titlepage.tex
+++ b/doku/thesis_framing/titlepage.tex
@@ -51,7 +51,7 @@
       Fachhochschule Wedel\\
       Feldstraﬂe 143\\
       22880 Wedel, Deutschland\\
-      Tel.: +49~(41\,03)~80\,48-xx\\
+      Tel.: +49~(41\,03)~80\,48-810\\
       E-Mail: eg@fh-wedel.de\\
          
       \raggedleft
@@ -59,8 +59,8 @@
       Fachhochschule Wedel\\
       Feldstraﬂe 143\\
       22880 Wedel, Deutschland\\
-      Tel.: +49~(41\,03)~80\,48-xx\\
-      E-Mail: woggon@eyefactive.com\\
+      Tel.: +49~(41\,03)~80\,48-49\\
+      E-Mail: mwoggon@eyefactive.com\\
     \end{multicols}
  \end{minipage}
 }
