--- a/doku/projektbericht.tex
+++ b/doku/projektbericht.tex
@@ -24,7 +24,7 @@
   \input{chapter/2programmierhandbuch/0entwicklungskonfig}
   \input{chapter/2programmierhandbuch/1problemanalyse_realisation}
   \input{chapter/2programmierhandbuch/2grundlegende_datenstrukturen}
-  \input{chapter/2programmierhandbuch/3programmorganisation}
+  %\input{chapter/2programmierhandbuch/3programmorganisation}
   %\input{chapter/2programmierhandbuch/4programmtest}
 
 %\appendix
