--- a/doku/thesis_framing/titlepage.tex
+++ b/doku/thesis_framing/titlepage.tex
@@ -25,9 +25,9 @@
     \begin{multicols}{2}
       \raggedright
        {\Large B.\,Sc. Markus Knofe}\\
-       straﬂe nr\\
-       2xxxx Hamburg, Deutschland\\
-       Tel: +49~(40)~00\,00\,00\\
+       Schleswiger Hagen 13\\
+       22844 Norderstedt, Deutschland\\
+       Tel: +49~(40)~526\,18\,39\\
        E-Mail: markus@knofe.net\\
        MatrNr.: 6718
 
